fix(style): add css utility for spacing

--- a/styles.css
+++ b/styles.css
@@ -859,3 +859,8 @@
     width: auto !important;
     max-height: min(700px, calc(100vh - var(--safe-area-inset-top) - var(--header-height) - var(--size-4-4)* 2));
 }
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
